--- a/style.css
+++ b/style.css
@@ -34,9 +34,7 @@ button {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
-
 }
-
 
 .row {
   width: 100%;
@@ -124,9 +122,7 @@ nav {
   padding: 50px 0;
   width: 100%;
 }
-/* .container{
-    margin: 60px 0;
-} */
+
 
 .title{
     font-size: 50px;
@@ -178,8 +174,6 @@ nav {
     box-shadow: 7px 7px 14px rgba(134, 93, 204, 0.3)
 }
 
-
-
 .main-photo{
     display: flex;
     width: 100%;
@@ -195,10 +189,7 @@ nav {
 }
 
 @media (max-width: 768px) {
-  /* .header__description {
-    padding: 0 24px;
-  } */
-
+  
   h1 {
     font-size: 24px;
   }
@@ -222,7 +213,7 @@ nav {
     width: 100%;
     height: 48px;
     padding-top: 8px;
-    margin: 0;
+    margin: 0 auto;
   }
 }
 /* SMALL PHONES, LARGE SMARTPHONES */
